fix: update header background color of users table for better visibility

--- a/src/app/pages/users-list-page/users-list-page.component.css
+++ b/src/app/pages/users-list-page/users-list-page.component.css
@@ -93,7 +93,7 @@
 }
 
 .users-table thead {
-  background-color: #007bff;
+  background-color: #969696;
 }
 
 .users-table th {
